--- a/style.css
+++ b/style.css
@@ -8,33 +8,37 @@ ul {
 }
 
 .container {
-    border:1px solid red;
-
     display: grid;
     grid-template-rows: 150px 208px 1692px;
     grid-template-columns: 1fr 4fr;
 }
 
 header {
-    background: #be8080;
+    background: #ffffff;
     grid-row: 1 / 2;
     grid-column: 2 / 3;
 }
 
 .banner {
-    background: #beb380;
+    background: #ffffff;
     grid-row: 2 / 3;
-    grid-column: 2 / 3;    
+    grid-column: 2 / 3;
+    
+    color: #000000;
 }
 
 .sidebar {
-    background: #8091be;
+    background: #1992d4;
     grid-row: 1 / 4;
     grid-column: 1 / 2;
+
+    color: #ffffff;
 }
 
 main {
-    background: #80be90;
+    background: #e2e8f0;
     grid-row: 3 / 4;
     grid-column: 2 / 3;
+
+    color: #000000;
 }
