--- a/style.css
+++ b/style.css
@@ -75,6 +75,9 @@
 
 :root {
     --color-text-normal: #000000;
+    --color-brand: #1992d4;
+    --color-background-default: #e2e8f0;
+    --color-background-light: #ffffff;
 }
 
 * {
@@ -102,13 +105,13 @@ ul {
 }
 
 header {
-    background: #ffffff;
+    background: var(--color-background-light);
     grid-row: 1 / 2;
     grid-column: 2 / 3;
 }
 
 .banner {
-    background: #ffffff;
+    background: var(--color-background-light);
     grid-row: 2 / 3;
     grid-column: 2 / 3;
     
@@ -116,7 +119,7 @@ header {
 }
 
 .sidebar {
-    background: #1992d4;
+    background: var(--color-brand);
     grid-row: 1 / 4;
     grid-column: 1 / 2;
 
@@ -124,7 +127,7 @@ header {
 }
 
 main {
-    background: #e2e8f0;
+    background: var(--color-background-default);
     grid-row: 3 / 4;
     grid-column: 2 / 3;
 
