--- a/style.css
+++ b/style.css
@@ -189,4 +189,23 @@ main {
     grid-column: 2 / 3;
 
     color: var(--color-text-normal);
+
+    display: grid;
+    grid-template: 1fr 1fr / 2.5fr 1fr;
+}
+
+.projects {
+    grid-row: 1 / 3;
+    grid-column: 1 / 2;
+}
+
+.projects .container-cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-auto-rows: 217px;
+    gap: 30px;
+}
+
+.projects .card {
+    background: var(--color-background-light);
 }
