--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@
 
 :root {
     --color-text-normal: #000000;
+    --color-text-gray: #636363;
     --color-brand: #1992d4;
     --color-background-default: #e2e8f0;
     --color-background-light: #ffffff;
@@ -197,15 +198,38 @@ main {
 .projects {
     grid-row: 1 / 3;
     grid-column: 1 / 2;
+
+    padding-left: 20px;
+    padding-top: 36px;
 }
 
 .projects .container-cards {
+
+    margin-top: 16px;
+
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, 380px);
     grid-auto-rows: 217px;
     gap: 30px;
 }
 
 .projects .card {
     background: var(--color-background-light);
+    border-radius: 8px;
+    border-left: 10px solid #f0b429;
+    padding-left: 30px;
+    padding-right: 40px;
+    padding-top: 36px;
+}
+
+.projects .card p {
+    color: var(--color-text-gray);
+    font-size: 1rem;
+    font-weight: normal;
+}
+
+.projects .card p.title {
+    color: var(--color-text-normal);
+    font-size: 1.125rem;
+    font-weight: bold;
 }
