--- a/style.css
+++ b/style.css
@@ -126,6 +126,8 @@ header {
     grid-column: 1 / 2;
 
     color: #ffffff;
+
+    display: grid;
 }
 
 .sidebar a {
@@ -134,39 +136,46 @@ header {
 }
 
 .sidebar .logo-link {
+    grid-row: 1 / 2;
+
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 2fr;
     justify-items: center;
+    align-items: center;
+    gap: 20px;
+
+    margin-top: 24px;
+    margin-bottom: 62px;
 }
 
 .sidebar .logo-link .icon {
+    grid-column: 1 / 2;
+    justify-self: end;
+    
     width: 36px;
     height: 36px;
     background: #ffffff;
-
-    grid-column: 1 / 2;
 }
 .sidebar .logo-link .title {
+    grid-column: 2 / 3;
+    justify-self: start;
+
     font-size: 1.75rem; /*28px*/
     font-weight: bold;
-
-    grid-column: 2 / 3;
 }
 
 .sidebar .nav {
     padding-left: 30px;
+
+    grid-row: 2 / 3;
 }
 
 .sidebar .nav li  {
-    display: flex;
+    display: grid;
     align-items: center;
     justify-content: start;
     gap: 20px;
     margin-bottom: 24px;
-}
-
-.sidebar .nav > li:nth-child(1) {
-    margin-top: 60px;
 }
 
 .sidebar .nav > li:nth-child(7) {
