--- a/style.css
+++ b/style.css
@@ -254,27 +254,35 @@ main {
 .announcements > .card {
     background-color: var(--color-background-light);
     border-radius: 8px;
-    padding: 15px 26px;
+    padding: 32px 28px;
+    padding-bottom: 12px;
     margin-right: 34px;
     margin-top: 16px;
 
+
     display: grid;
-    grid-auto-rows: 98px;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 84px;
+    gap: 16px;
 }
 
 .announcements > .card > .division {
-    padding: 20px 16px;
     overflow: hidden;
     /* text-overflow: ellipsis; */
     /* https://css-tricks.com/almanac/properties/l/line-clamp/ almanac entry for line-clamp - but not good browser support*/
     /* https://codepen.io/zachhanding/pen/MKyVPq cross browser pure css solution with utility classes*/
+    border-bottom: 1px solid #d2d2d2;
+}
+
+.announcements > .card > .division:nth-child(3) {
+    border-bottom: none;
 }
 
 .announcements > .card p.title {
     font-size: 0.875rem; /* 14px */
     font-weight: bold;
     color: var(--color-text-normal);
-    margin-bottom: 0.5rem;
+    /* margin-bottom: 0.5rem; */
 }
 
 .announcements > .card p {
