--- a/style.css
+++ b/style.css
@@ -297,6 +297,7 @@ main {
 .trending {
     background-color: var(--color-background-default);
     padding-top: 18px;
+    /* TODO: bottom of all .card of page do not sit flush with each other */
 /* in addition to gap: 22px in .main  */
     grid-row: 2 / 3;
     grid-column: 2 / 3;
