--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ header input {
     grid-template-columns: min-content auto;
     grid-auto-rows: min-content;
     align-items: center;
-    gap: 20px;
+    gap: 12px;
 
     margin-top: 24px;
     margin-bottom: 62px;
@@ -253,10 +253,15 @@ header input {
 .sidebar .logo-link .icon {
     grid-column: 1 / 2;
     
-    width: 36px;
-    height: 36px;
-    background: #ffffff;
+    width: 48px;
+    height: 48px;
 }
+
+.sidebar .icon svg {
+    fill: var(--color-text-white);
+
+}
+
 .sidebar .logo-link .title {
     grid-column: 2 / 3;
     justify-self: start;
