--- a/style.css
+++ b/style.css
@@ -279,7 +279,7 @@ header input {
     grid-template-columns: min-content min-content;
     align-items: center;
     justify-content: start;
-    gap: 20px;
+    gap: 24px;
     margin-bottom: 24px;
 }
 
@@ -292,10 +292,10 @@ header input {
     font-weight: bold;
 }
 
-.sidebar .nav li img {
-    width: 20px;
-    height: 20px;
-    background: #ffffff;
+.sidebar .nav li svg {
+    width: 24px;
+    height: 24px;
+    fill: var(--color-text-white);
 }
 
 main {
