--- a/style.css
+++ b/style.css
@@ -341,6 +341,8 @@ main {
     padding-right: 30px;
     padding-top: 36px;
     padding-bottom: 30px;
+
+    display: grid;
 }
 
 .projects .card p {
@@ -354,6 +356,14 @@ main {
     color: var(--color-text-normal);
     font-size: 1.125rem;
     font-weight: bold;
+}
+
+.projects .card .interact {
+    display: grid;
+    grid-template-columns: repeat(3, min-content);
+    justify-content: end;
+    align-items: center;
+    gap: 30px;
 }
 
 .projects .card button {
