Make overall layout height responsive

--- a/style.css
+++ b/style.css
@@ -107,8 +107,11 @@ button {
 }
 
 .container {
+
+    height: 100vh;
+
     display: grid;
-    grid-template-rows: 75px 104px 846px;
+    grid-template-rows: 75px 104px 1fr;
     grid-template-columns: 1fr 4fr;
 }
 
@@ -311,7 +314,7 @@ main {
     color: var(--color-text-normal);
 
     display: grid;
-    grid-template: 1fr 1fr / 2.5fr 1fr;
+    grid-template: auto auto / 2.5fr 1fr;
     /* gap: 22px; */
 }
 
@@ -446,7 +449,7 @@ main {
 .trending > .card {
     background-color: var(--color-background-light);
     border-radius: 8px;
-    padding: 22px 28px;
+    padding: 22px 28px 30px 28px;
     margin-top: 16px;
     margin-right: 34px;
 
