--- a/style.css
+++ b/style.css
@@ -314,8 +314,8 @@ main {
     color: var(--color-text-normal);
 
     display: grid;
-    grid-template: auto auto / 2.5fr 1fr;
-    /* gap: 22px; */
+    grid-template: min-content min-content / 2.5fr 1fr;
+    gap: 22px;
 }
 
 .projects {
@@ -324,16 +324,27 @@ main {
 
     padding-left: 20px;
     padding-top: 36px;
-}
-
-.projects .container-cards {
-
-    margin-top: 16px;
 
     display: grid;
-    grid-template-columns: repeat(auto-fit, 380px);
-    grid-auto-rows: 217px;
+    grid-template-columns: 1fr;
+    grid-template-rows: min-content auto;
     gap: 30px;
+
+}
+
+.projects .cards-container {
+    grid-row: 2 / 3;
+    grid-column: 1 / 2;
+    
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(217px, 1fr));
+    gap: 30px;
+}
+
+.projects h1 {
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
 }
 
 .projects .card {
@@ -347,6 +358,8 @@ main {
 
     display: grid;
 }
+
+
 
 .projects .card p {
     color: var(--color-text-gray);
@@ -395,6 +408,10 @@ main {
 
     grid-row: 1 / 2;
     grid-column: 2 / 3;
+
+    display: grid;
+    gap: 30px;
+    grid-template-rows: min-content min-content;
 }
 
 .announcements > .card {
@@ -402,8 +419,6 @@ main {
     border-radius: 8px;
     padding: 32px 28px;
     margin-right: 34px;
-    margin-top: 16px;
-
 
     display: grid;
     grid-template-columns: 1fr;
@@ -439,18 +454,22 @@ main {
 
 .trending {
     background-color: var(--color-background-default);
-    padding-top: 18px;
     /* TODO: bottom of all .card of page do not sit flush with each other */
 /* in addition to gap: 22px in .main  */
     grid-row: 2 / 3;
     grid-column: 2 / 3;
+
+    padding-top: 20px;
+
+    display: grid;
+    gap: 30px;
+    grid-template-rows: min-content min-content;
 }
 
 .trending > .card {
     background-color: var(--color-background-light);
     border-radius: 8px;
     padding: 22px 28px 30px 28px;
-    margin-top: 16px;
     margin-right: 34px;
 
     display: grid;
