--- a/style.css
+++ b/style.css
@@ -363,6 +363,8 @@ main {
     padding-bottom: 30px;
 
     display: grid;
+
+    box-shadow: 8px 8px 12px -8px rgba(0, 0, 0, 0.3); 
 }
 
 
@@ -431,6 +433,8 @@ main {
     grid-template-columns: 1fr;
     grid-auto-rows: 84px;
     gap: 16px;
+
+    box-shadow: 8px 8px 12px -8px rgba(0, 0, 0, 0.3); 
 }
 
 .announcements > .card > .division {
@@ -482,6 +486,8 @@ main {
     display: grid;
     grid-template-columns: 1fr;
     gap: 24px;
+
+    box-shadow: 8px 8px 12px -8px rgba(0, 0, 0, 0.3); 
 }
 
 .trending > .card > .division {
